Fix bug with horiontal overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,7 @@ main {
 }
 
 #about-us > div > img {
-    /* max-width: 300px; */
+    max-width: 300px;
     text-align:center;
     padding: 5px;
     margin: 5px;
